RESOLVED FIXED 265258
[WGSL] Constant wrapper for std functions is broken for f16
https://bugs.webkit.org/show_bug.cgi?id=265258
Summary [WGSL] Constant wrapper for std functions is broken for f16
Tadeu Zagallo
Reported 2023-11-22 11:28:30 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-22 11:28:44 PST
Tadeu Zagallo
Comment 2 2023-11-22 11:30:04 PST
EWS
Comment 3 2023-11-24 04:02:07 PST
Committed 271094@main (2e84bfc80a0a): <https://commits.webkit.org/271094@main> Reviewed commits have been landed. Closing PR #20831 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.