[WGSL] Constant wrapper for std functions is broken for f16 https://bugs.webkit.org/show_bug.cgi?id=265258 rdar://118724633

Reviewed by Mike Wyrzykowski.

Another instance where the result type of constant functions needs to be explicit
for f16/half.

* Source/WebGPU/WGSL/ConstantFunctions.h:

Canonical link: https://commits.webkit.org/271094@main